tests/snapshots/tui/logs_empty_trace_80x24.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Dataset  2 Pipeline  3 Training  4 Logs          rust_expert "
"  Logs · TRACE and above                                                        "
"                                                                                "
"  nothing captured at this level: OVERBRAINER_LOG sets what is captured         "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" j/k scroll · G follow · f level                                 v#.#.#  ? help "
