tests/snapshots/tui/logs_pod_80x24.snap
---
source: src/tui/snapshots.rs
---
" ⠿ 1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs  6 Compare  rust_expert "
"  Logs · pod of run 20260922-143005-a1b2                                        "
"                                                                                "
"  14:10:00 sys   pulling image overbrainer/axolotl                              "
"  14:12:30 ctr   bootstrap: run 20260922-143005-a1b2                            "
"  14:13:10 ctr   export HF_TOKEN=***                                            "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" j/k scroll · G follow · f level · s source · x export    $0.36  v#.#.#  ? help "
