tests/snapshots/tui/logs_warn_80x24.snap
---
source: src/tui/snapshots.rs
---
" ⠿ 1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs  6 Compare  rust_expert "
"  Logs · WARN and above                                                         "
"                                                                                "
"  14:12:23 WARN  cli::progress: answers: 77aa: 429 Too Many Requests; retrying  "
"  14:12:24 ERROR cli::progress: answers: 77aa failed: the answer is not a JSON  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" j/k scroll · G follow · f level · s source · x export           v#.#.#  ? help "
