tests/snapshots/tui/picker_error_80x24.snap
---
source: src/tui/snapshots.rs
---
" ⠿ 1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs  6 Compare  rust_expert "
"╭ data ────────────────────────────────────────────────────────────────────────╮"
"│ … reading data/                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│ ╭ Network volume ──────────────────────────────────────────────────────────╮ │"
"│ │ cannot read the Runpod catalog: no Runpod API key: set                   │ │"
"│ │ OVERBRAINER_RUNPOD__API_KEY                                              │ │"
"│ ╰ t types the value, Esc closes ───────────────────────────────────────────╯ │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
" t type · Esc close                                                      ? help "
