tests/snapshots/tui/picker_gpus_120x40.snap
---
source: src/tui/snapshots.rs
assertion_line: 603
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs                                       rust_expert "
"╭ data ────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ … reading data/                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│         ╭ GPU types by price (about 20.4 GB per GPU needed): 2 chosen ─────────────────────────────────────╮         │"
"│         │       ID                              VRAM  $/H   MAX  STOCK    FIT                              │         │"
"│         │       auto: cheapest in stock                                                                    │         │"
"│         │   1   NVIDIA A40                      48    0.40  10   HIGH     ok                               │         │"
"│         │   2   NVIDIA GeForce RTX 4090         24    0.69  8    MEDIUM   ok                               │         │"
"│         │ ▶     NVIDIA RTX 2000 Ada Generation  16    0.24  4    HIGH     small                            │         │"
"│         │       NVIDIA L4                       24    0.43  1    HIGH     ok                               │         │"
"│         │       NVIDIA RTX A6000                48    0.49  8    LOW      ok                               │         │"
"│         │       NVIDIA L40S                     48    0.86  8    MEDIUM   ok                               │         │"
"│         │       NVIDIA A100 80GB PCIe           80    1.64  8    NONE     ok                               │         │"
"│         │       AMD Instinct MI300X OAM         192   2.49  8    NONE     ok                               │         │"
"│         │       NVIDIA H100 80GB HBM3           80    2.99  8    LOW      ok                               │         │"
"│         │       NVIDIA H200                     141   -     8    UNKNOWN  ok                               │         │"
"│         ╰ Space toggles, Enter keeps, o sorts, t types, Esc cancels ───────────────────────────────────────╯         │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
" Space toggle · J/K order · / filter · Enter keep · t type · Esc cancel                                          ? help "
